Arreglos para la cargar la data

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,10 @@
         "notna"
     ],
     "cSpell.ignoreWords": [
+        "MGJUWVVVRPO",
+        "Rnmdo",
+        "Sqtfm",
+        "gdrive",
         "pelicula"
     ]
 }
