Actualizacion de README

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,12 +2,14 @@
     "cSpell.words": [
         "dataframe",
         "dayofweek",
+        "disponibilizar",
         "dropna",
         "dtype",
         "fastapi",
         "fillna",
         "isin",
-        "notna"
+        "notna",
+        "Uvicorn"
     ],
     "cSpell.ignoreWords": [
         "MGJUWVVVRPO",
