--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ comm==0.2.2
 debugpy==1.8.5
 decorator==5.1.1
 executing==2.0.1
-fastapi==0.112.1
+fastapi
 h11==0.14.0
 httptools==0.6.1
 idna==3.7
@@ -20,7 +20,7 @@ matplotlib-inline==0.1.7
 nest-asyncio==1.6.0
 numpy==1.26.4
 packaging==24.1
-pandas==2.2.2
+pandas
 parso==0.8.4
 platformdirs==4.2.2
 prompt_toolkit==3.0.47
@@ -32,7 +32,6 @@ Pygments==2.18.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
-pywin32==306
 PyYAML==6.0.2
 pyzmq==26.1.0
 six==1.16.0
@@ -43,7 +42,7 @@ tornado==6.4.1
 traitlets==5.14.3
 typing_extensions==4.12.2
 tzdata==2024.1
-uvicorn==0.30.6
+uvicorn
 watchfiles==0.23.0
 wcwidth==0.2.13
 websockets==12.0
